--- a/src/index.scss
+++ b/src/index.scss
@@ -11,5 +11,6 @@ body {
   padding: 0;
   font-family: $base-font;
   font-size: $base-font-size;
+  line-height: $base-line-height;
   height: 100%;
 }
